<resources>
    <string name="app_name">InventoryApp</string>
    <string name="action_settings">Settings</string>
    <string name="empty_list_text">Nothing In Inventory, Please click the button below and start adding items.</string>

    <!--Sample Strings-->
    <string name="sample_text">Sample Text</string>
    <string name="sample_num">5</string>

    <!--Category Strings-->
    <string name="item_name">Item Name</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_email">Supplier Email</string>
    <string name="stock">Quantity In Stock</string>
    <string name="price">Price</string>
    <string name="image">Image</string>
    <string name="sale_button">Sale</string>

    <!--Hint Text-->
    <string name="hint_item_name">Enter Item Name</string>
    <string name="hint_supplier_name">Enter Supplier Name</string>
    <string name="hint_supplier_email">Enter Supplier Email</string>
    <string name="hint_price">Enter Price</string>

    <!--Button Text-->
    <string name="delete_item_button">Delete Item</string>
    <string name="order_button">Order More</string>
    <string name="image_button">Insert Image</string>
    <string name="shipment_button">Order Received</string>
    <string name="save_button">Save</string>

    <!--Menu Text-->
    <string name="menu_remove_all">Remove All</string>

    <!--Title Text-->
    <string name="edit_item">Edit Item</string>
    <string name="add_item">Add Item</string>

    <!--Status Message Text-->
    <string name="delete_failed">Delete Failure</string>
    <string name="delete_succeeded">Delete Succeeded</string>

    <string name="update_stock_failed">Update Stock Failed</string>
    <string name="update_stock_succeeded">Update Stock Succeeded</string>

    <string name="insert_item_failed">Insert Failure</string>
    <string name="insert_item_succeeded">Insert Success</string>

    <string name="update_failed">Update Failed</string>
    <string name="update_succeeded">Update Succeeded</string>

    <string name="need_image">Need Image</string>
    <string name="fill_out_fields_warning">Fill Out All Fields</string>
    <string name="valid_number_warning"></string>

    <string name="need_valid_email">Not a valid email</string>

    <!--Email Text-->
    <string name="subject_line">Order 10 More Units</string>
    <string name="body">We need more units asap</string>

    <!--Alert Dialog-->
    <string name="delete_warning_message">Are you sure you want to delete this?</string>
    <string name="affirmative">OK</string>
    <string name="negative">NO</string>

</resources>
